--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./src/app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon ./src/app.js"
+    "server":"nodemon index.js"
   },
   "keywords": [],
   "author": "weberlab",
