--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon ./src/app.js"
+    "server": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "weberlab",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ethers": "^6.12.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "moment": "^2.30.1",
@@ -21,6 +22,7 @@
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "web3": "^4.8.0"
   }
 }
